# TuRiNG-A-PUF-randomness-test-suite

./: CITATION.cff  LICENSE  README.md  setup.cfg  setup.py
src/: Main.py  README.md  __init__.py
src/Paper_submission_code/: 4096_example_output.txt  Data_Formatting.py  Main.py  Randomness_Tests.py  big_data_example_output.txt  chi_sq_testing_paper.py
src/Paper_submission_code/randomness_testsuite/: FourbyFourBMRT.py  NewMain.py  RunTest.py  RunTest_Q.py  Spectral_Q.py
src/randomness_test_suite/: __init__.py
src/randomness_test_suite/Paper_submission_code/: Inter_Array_FHD.py  README.md
src/randomness_test_suite/Paper_submission_code/randomness_testsuite/: ApproximateEntropy.py  FrequencyTest_Q.py  Serial.py  TemplateMatching_4bit.py  __init__.py
