[metadata]
name = randomness_test_suite
author = Charlie Grover
author_email = rbennell@cryptoquantique.com
description = PUF Randomness Tests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cryptoquantique/puf-randomness-test
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
package_dir=
    =src
install_requires =
    scipy

[options.packages.find]
where=src

[flake8]
exclude = .git,tests/context.py
per-file-ignores = __init__.py:F401
max-line-length = 120
